Saving default with saving format

--- a/general_settings.json
+++ b/general_settings.json
@@ -1,67 +1,191 @@
 {
-    "General": {
-        "Show": true,
-        "SaveImages": false,
-        "StorePath": "workspace/raw"
-    },
-    "Camera" : {
+    "Camera": {
+        "Height": 960,
         "Serial1": "23479715",
         "Serial2": "23512852",
-        "Width": 1280,
-        "Height": 960
+        "Width": 1280
+    },
+    "ColorThreshold1": {
+        "H_lower": 0,
+        "H_upper": 99,
+        "S_lower": 0,
+        "S_upper": 99,
+        "V_lower": 0,
+        "V_upper": 99,
+        "threshold": 200
+    },
+    "ColorThreshold2": {
+        "H_lower": 0,
+        "H_upper": 125,
+        "S_lower": 0,
+        "S_upper": 255,
+        "V_lower": 0,
+        "V_upper": 255,
+        "threshold": 10000
+    },
+    "General": {
+        "SaveImages": false,
+        "Show": true,
+        "StorePath": "workspace/raw"
+    },
+    "Offset_Camera": {
+        "ref_middle_point_cam1": 45,
+        "ref_middle_point_cam2": 54,
+        "roi_offset_cam1": [
+            0,
+            0,
+            1171,
+            127
+        ],
+        "roi_offset_cam2": [
+            0,
+            26,
+            1171,
+            127
+        ]
     },
     "Plc": {
         "Ip": "192.168.10.10",
         "Rack": 0,
         "Slot": 1
     },
-    "ColorThreshold1":{
-        "H_upper": 125,
-        "S_upper": 255,
-        "V_upper": 255,
-        "H_lower": 0,
-        "S_lower": 0,
-        "V_lower": 0,
-        "threshold": 200
-    },
-    "ColorThreshold2":{
-        "H_upper": 125,
-        "S_upper": 255,
-        "V_upper": 255,
-        "H_lower": 0,
-        "S_lower": 0,
-        "V_lower": 0,
-        "threshold": 10
-    },
     "ROIs": {
-        "Cam1": [[255, 380, 195, 265],
-                 [514, 380, 195, 265],
-                 [825, 380, 195, 265],
-                 [995, 149, 235, 230],
-                 [695, 162, 240, 190],
-                 [347, 135, 320, 235],
-                 [50 , 215, 275, 175],
-                 [985, 645, 235, 230],
-                 [695, 680, 240, 190],
-                 [353, 665, 320, 235],
-                 [50 , 650, 275, 175]],
-        "Cam2": [[281, 381, 195, 265],
-                 [527, 384, 195, 265],
-                 [823, 386, 195, 265],
-                 [980, 650, 235, 230],
-                 [687, 670, 240, 190],
-                 [358, 652, 320, 235],
-                 [55 , 640, 275, 175],
-                 [995, 161, 235, 230],
-                 [693, 171, 240, 190],
-                 [366, 151, 320, 235],
-                 [55 , 204, 275, 175]]
-    },
-    "Offset_Camera":{
-      "ref_middle_point_cam1": 45,
-      "ref_middle_point_cam2": 54,
-      "roi_offset_cam1": [0, 0, 1171, 127],
-      "roi_offset_cam2": [0, 26, 1171, 127]
+        "Cam1": [
+            [
+                255,
+                380,
+                195,
+                265
+            ],
+            [
+                514,
+                380,
+                195,
+                265
+            ],
+            [
+                825,
+                380,
+                195,
+                265
+            ],
+            [
+                995,
+                149,
+                235,
+                230
+            ],
+            [
+                695,
+                162,
+                240,
+                190
+            ],
+            [
+                347,
+                135,
+                320,
+                235
+            ],
+            [
+                50,
+                215,
+                275,
+                175
+            ],
+            [
+                985,
+                645,
+                235,
+                230
+            ],
+            [
+                695,
+                680,
+                240,
+                190
+            ],
+            [
+                353,
+                665,
+                320,
+                235
+            ],
+            [
+                50,
+                650,
+                275,
+                175
+            ]
+        ],
+        "Cam2": [
+            [
+                281,
+                381,
+                195,
+                265
+            ],
+            [
+                527,
+                384,
+                195,
+                265
+            ],
+            [
+                823,
+                386,
+                195,
+                265
+            ],
+            [
+                980,
+                650,
+                235,
+                230
+            ],
+            [
+                687,
+                670,
+                240,
+                190
+            ],
+            [
+                358,
+                652,
+                320,
+                235
+            ],
+            [
+                55,
+                640,
+                275,
+                175
+            ],
+            [
+                995,
+                161,
+                235,
+                230
+            ],
+            [
+                693,
+                171,
+                240,
+                190
+            ],
+            [
+                366,
+                151,
+                320,
+                235
+            ],
+            [
+                55,
+                204,
+                275,
+                175
+            ]
+        ]
     },
     "hmi_height": 384,
     "hmi_width": 512
